<resources>
    <string name="app_name">MaxAppMVVM</string>
    <string name="cliente">Clientes</string>
    <string name="client">Cliente</string>
    <string name="pedidos">Pedidos</string>
    <string name="ferramentas">Ferramentas</string>
    <string name="resumo_de_vendas">Resumo de vendas</string>
    <string name="dados_cliente">Dados do cliente</string>
    <string name="dados">Dados</string>
    <string name="cpf">CPF:</string>
    <string name="cnpj">CNPJ:</string>
    <string name="ramo_atividade">Ramo de atividade:</string>
    <string name="enderecos">Endereços:</string>
    <string name="telefone">Telefone:</string>
    <string name="celular">Celular:</string>
    <string name="conjuge">Cônjuge:</string>
    <string name="tipo_cliente">Tipo:</string>
    <string name="time_cliente">Time:</string>
    <string name="email">E-mail:</string>
    <string name="data_nasc">Data Nasc.:</string>
    <string name="data_nasc_conjuge">Data Nasc\nCônjuge:</string>
    <string name="hobbie_client">Hobbie:</string>
    <string name="contatos_cliente">Contatos</string>
    <string name="historico_pedidos">Hist. Pedidos</string>
    <string name="alvarás">Alvarás</string>
    <string name="fechar">FECHAR</string>
    <string name="legendas">Legendas</string>
    <string name="status_pedidos_erp">Status do pedido no ERP</string>
    <string name="processamento_status">Em processamento por parte do FV</string>
    <string name="recusado_status">Pedido recusado pelo ERP</string>
    <string name="pendente_status">Posição no ERP Pendente</string>
    <string name="bloqueado_status">Posição no ERP Bloqueado</string>
    <string name="liberado_status">Posição no ERP Liberado</string>
    <string name="numero_pedido_rca">N°Ped. Rca/ERP: </string>
    <string name="montado_status">Posição no ERP Montado</string>
    <string name="faturado_status">Posição no ERP Faturado</string>
    <string name="cancelado_status">Posição no ERP Cancelado</string>
    <string name="orcamento">Orçamento</string>
    <string name="INDEFINIDO">INDEFINIDO</string>
    <string name="Onecliente">Cliente: </string>
    <string name="critica">Crítica</string>
    <string name="critica_dois_pontos">Crítica:</string>
    <string name="retorno_status_aguardando">Aguardando retorno no ERP</string>
    <string name="sucesso">Sucesso</string>
    <string name="falha_parcial">Falha parcial</string>
    <string name="version_app">v.1.0.0</string>
    <string name="verificar_status">Verificar status do cliente</string>
    <string name="falha_total">Falha total</string>
    <string name="corte_status_pedido">Pedido sofreu corte</string>
    <string name="pedido_com_falta">Pedido com falta</string>
    <string name="cancelado_pedido">Pedido cancelado no ERP</string>
    <string name="pedido_com_devolucao">Pedido com devolução</string>
    <string name="telemarketing_pedido">Pedido feito pelo Telemarketing</string>
    <string name="nada_encontrado">Nada encontrado…</string>
    <string name="descricao_nada_encontrado">Não há alvarás para exibir, \nverifique com o responsável pelo ERP.</string>
</resources>